test/positive/Inheritance-among-concrete-clafers-Year.cfr
// [i216] http://gsd.uwaterloo.ca:8888/question/917/inheritance-among-concrete-clafers

quarter +
   month 3
      week 4
         day 7

Q1 : quarter
   january : month
      week1 : week
         day1 : day
      week2 : week